# midjourney-rust

./: .gitignore  Cargo.toml  README.MD  log4rs.yaml  start.sh
db/: midjourney  midjourney.wal
release/: midjourney-rust
src/: discord.rs  main.rs  message.rs  web.rs
