[package]
name = "midjourney-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]

[dependencies]
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
zmq = "0.10.0"
log4rs = "0.12"
log = "0.4.20"
polodb_core = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
rouille = "3.6.2"